--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mongodb://localhost/tasks'
+DATABASE_URL=mongodb+srv://admin:12341234a@cluster0.ksahp.mongodb.net/?retryWrites=true&w=majority
