--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task-panel-be",
   "version": "1.0.0",
   "description": "Getir Task Panel Case Study Backend",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "16.13.1"
   },
